--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,14 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>heJuRuizeng-admin</display-name>
 	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:spring/spring-db.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
 	<!-- 配置SpringMVC DispatcherServlet -->
 	<servlet>
 		<servlet-name>dispatcherServlet</servlet-name>
@@ -13,7 +21,7 @@
 		<init-param>
 			<!-- 加载SpringMVC的xml到 spring的上下文容器中 --> 
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath:spring/spring-*.xml</param-value>
+			<param-value>classpath:spring/spring-mvc.xml</param-value>
 		</init-param>
 	</servlet>
 	
